Cambios en la documentacion  de swagger entre otros.
